fix: [pd-1031] remove the color tag mentioned in the plp and adjust spacing

--- a/src/component/ProductItem/ProductItem.style.scss
+++ b/src/component/ProductItem/ProductItem.style.scss
@@ -184,7 +184,8 @@
       display : flex;
       flex-direction: row;
       align-items: center;
-      margin: 14px 0px;
+      width: 242px;
+      height: 31px;
 
      .left-arrow {
       content: "";
